--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "postcss-preset-env": "^6.7.0",
     "preact": "^10.5.13",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-svg": "^15.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
