--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@sanity/client": "^3.2.0",
     "embla-carousel-react": "^6.2.0",
     "framer-motion": "^4.1.17",
+    "instagram-web-api": "^2.2.2",
     "next": "^12.0.8",
     "next-sanity": "^0.5.1",
     "next-sanity-image": "^3.2.1",
