--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^3.2.0",
+    "date-fns": "^2.28.0",
     "embla-carousel-react": "^6.2.0",
     "framer-motion": "^4.1.17",
     "instagram-web-api": "^2.2.2",
